--- a/src/app/pages/registration-form/registration-form.component.html
+++ b/src/app/pages/registration-form/registration-form.component.html
@@ -9,12 +9,12 @@
               <h1 class="mb-4">Student Registration Form</h1>
               <div class="mb-3">
                 <label for="username" class="form-label">Username</label>  
-                  <input type="text" id="username" formControlName="username" class="form-control">
+                  <input type="text" id="username" placeholder="Enter Username" formControlName="username" class="form-control">
                   <span  *ngIf="username?.invalid && username?.errors?.['required']" class="vlaid text-danger">Username is required</span>
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">E-Mail</label>
-                <input type="email" id="email" formControlName="email" class="form-control">
+                <input type="email" id="email" placeholder="Enter E-Mail" formControlName="email" class="form-control">
                 <span *ngIf="email?.invalid && email?.errors?.['required']" class=" vlaid text-danger">Email is required</span>
                 <span *ngIf="email?.invalid && email?.errors?.['email']" class="vlaid text-danger">Invalid email format</span>
               </div>
