--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -139,13 +139,13 @@ form div {
 
 /* Style for the checked state of the toggle buttons */
 .login-form input[type="radio"]:checked + label {
-  background-color: #007bff; /* Background color of the toggle button when checked */
-  color: #fff; /* Text color when checked */
+  background-color: #007bff; 
+  color: #fff; 
 }
 
 /* Additional styles for the toggle buttons */
 .login-form input[type="radio"] + label::before {
-  font-family: 'Font Awesome'; /* Font Awesome for icons (you can use any icon library or custom icons) */
+  font-family: 'Font Awesome'; 
   display: inline-block;
   width: 20px;
   height: 20px;
@@ -158,7 +158,7 @@ form div {
 
 /* Style for the checked state of the toggle button icon */
 .login-form input[type="radio"]:checked + label::before {
-  color: #fff; /* Icon color when checked */
+  color: #fff;
 }
 
 .select_Email_user{
