updated with reset form

--- a/src/app/pages/login-signup-buttons/login-signup-buttons.component.css
+++ b/src/app/pages/login-signup-buttons/login-signup-buttons.component.css
@@ -4,24 +4,24 @@
   box-sizing: border-box;
 }
 
-/* Style for active state */
 #loginButton.active, #signupButton.active {
-  background-color: rgb(7, 65, 255); /* Change to your desired active state style */
-  color: white; /* Change to your desired active state style */
+  background-color: rgb(7, 65, 255); 
+  color: white; 
 }
 
-/* Other button styles */
 .btn-primary {
-  color: rgb(7, 7, 7); /* Change to your desired button text color */
+  margin-top:-3px;
+  color: rgb(7, 7, 7); 
   font-size: 1.3rem;
   font-weight: bold;
   height: 2.5rem;
   border: none;
   border-bottom-left-radius:1rem ;
   border-bottom-right-radius:1.25rem ;
-  width: 50%; /* Extend button width to the end of the form */
+  width: 50%; 
   cursor: pointer;
   transition: background-color 0.3s ease;
+  background: gainsboro;
 }
 
 .btn-primary:hover {
@@ -36,5 +36,5 @@
 }
 
 .loginandsignup {
-  margin: 0 -4rem;
+  margin: -1rem -3rem 0 -3rem;
 }
