--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,136 +1,39 @@
-.loginandsignup {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #f8f9fa;
+.login-form {
+  background-color: #fff;
   border-radius: 10px;
-  background-color: #0056b3;
-  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
-}
-
-form h1 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-  text-align: center;
-}
-
-.container {
-  display: flex;
-  justify-content: center; /* Align the form to the right */
-  align-items: center;
-  padding: 0 1.5rem 1.5rem 1.5rem;
-}
-
-.container .login-forms {
-  width: 450px; 
-}
-.container .login-form {
-  background-color: #dadada;
-  margin-right: 5rem;
-  border-radius: 10px;
-  padding: 0 1.75rem 1.75rem 1.75rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 500px;
-  
-}
-.container .login-forms .login-form {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
 }
 
-.text-right{
-  color: #000;
-  margin: 0.6rem 0.6rem;
-  float: right;
+.login-forms h1{
+  font-size: 2.5rem;
 }
-.text-right a{
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-form div {
-  margin: 0.6rem 0.2rem;
-  font-size: 1.25rem;
-}
-
 .form-control {
-  width: calc(100% - 40px); /* Subtract padding and border width */
-  padding: 10px;
-  border: 1px solid #ccc;
   border-radius: 5px;
 }
 
-.vlaid {
+.text-danger {
   color: red;
-  font-size: 1rem;
-  margin-top: -10px;
-}
-
-.error {
-  color: #dc3545;
-  font-size: 0.9em;
-}
-
-.btn-primary {
-  font-size: 1.5rem;
-  background-color: #007bff;
-  border-color: #007bff;
-  border-radius: 5px;
-  width: calc(100% - 20px); /* Subtract padding and border width */
-  padding: 10px;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.btn-primary:hover {
-  background-color: #0056b3;
 }
 
 .text-center {
-  margin-top: 20px;
   text-align: center;
 }
 
-.btn-link {
-  color: #007bff;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 1.2rem;
-  padding: 1px 5px;
+.btn-primary {
+  border-radius: 5px;
 }
-
-.btn-link:hover {
-  text-decoration: underline;
-}
-
-.text-center.mb-3 {
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.text-center.mb-3 .btn-primary {
-  flex: 1;
-  margin-right: 10px;
-}
-
-.text-center.mb-3 .btn-primary:last-child {
-  margin-right: 0;
-}
-
 
 /* Hide the radio buttons */
 .login-form input[type="radio"] {
-  position: absolute;
-  opacity: 0;
+  display: none;
 }
 
 /* Style the labels to create toggle buttons */
 .login-form input[type="radio"] + label {
   display: inline-block;
-  background-color: #f8f9fa; /* Background color of the toggle button */
-  color: #212529; /* Text color */
+  background-color: #f8f9fa; 
+  color: #212529;
   padding: 10px 20px;
   border-radius: 20px;
   cursor: pointer;
@@ -159,23 +62,6 @@ form div {
 /* Style for the checked state of the toggle button icon */
 .login-form input[type="radio"]:checked + label::before {
   color: #fff;
-}
-
-.select_Email_user{
-  width: 15rem;
-  background-color: #f8f9fa;
-  border-radius: 20px;
-  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
-  padding: -10px;
-
-}
-.select_Email_user label{
-  width:5rem;
-  background: #000;
-  font-size: 1rem;
-  padding: -100px;
-  color: #fff;
-  text-align: center;
 }
 
 .password-input-group {
