--- a/src/app/pages/registration-form/registration-form.component.css
+++ b/src/app/pages/registration-form/registration-form.component.css
@@ -1,103 +1,33 @@
-.loginandsignup{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f8f9fa;
-    border: 2px solid blue;
-    border-radius: 10px;
-    background-color: #0056b3;
-    box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
-}
-form h1{
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    text-align: center;
-}
-
-.container {
-  display: flex;
-  justify-content: center; /* Align the form to the right */
-  align-items: center;
-  padding: 0 1.5rem 1.5rem 1.5rem;
-}
+/* Remove unnecessary styles */
 
 .container .register-form {
-  background-color: #dadada;
-  margin-right: 5rem;
+  background-color: #fff;
   border-radius: 10px;
-  padding: 0 1.75rem 1.75rem 1.75rem;
+  padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 500px; 
-  
-}
-
-form div {
-  margin: 0.6rem 0.2rem;
-  font-size: 1.25rem;
 }
 
 .form-control {
-  width: calc(100% - 40px); /* Subtract padding and border width */
-  padding: 10px;
-  border: 1px solid #ccc;
   border-radius: 5px;
-}
-
-.vlaid {
-  color: red;
-  font-size: 1rem;
-  margin-top: -10px;
-}
-
-.error {
-  color: #dc3545;
-  font-size: 0.9em;
 }
 
 .btn-primary {
-  font-size: 1.5rem;
-  background-color: #007bff;
-  border-color: #007bff;
   border-radius: 5px;
-  width: calc(100% - 20px); /* Subtract padding and border width */
-  padding: 10px;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
 }
 
-.btn-primary:hover {
-  background-color: #0056b3;
+.text-danger {
+  font-size: 0.9em;
 }
 
-.text-center {
-  margin-top: 20px;
-  text-align: center;
-}
 
 .btn-link {
-  color: #007bff;
-  text-decoration: none;
   font-weight: bold;
-  font-size: 1.2rem;
-  padding: 1px 5px;
 }
 
-.btn-link:hover {
-  text-decoration: underline;
+.text-danger {
+  color: red;
 }
 
-.text-center.mb-3 {
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.text-center.mb-3 .btn-primary {
-  flex: 1;
-  margin-right: 10px;
-}
-
-.text-center.mb-3 .btn-primary:last-child {
-  margin-right: 0;
+.login-forms h1{
+  font-size: 2em;
 }
