--- a/src/app/pages/registration-form/registration-form.component.html
+++ b/src/app/pages/registration-form/registration-form.component.html
@@ -1,43 +1,43 @@
 <div class="container">
   <div class="register-form">
     <div class="row justify-content-center">
-      <div class="col-md-6">
+      <div class="col">
         <div class="container">
           <div class="registration-form">
             <app-login-signup-buttons (login)="navigateToLogin()" (signup)="navigateToSignup()"></app-login-signup-buttons>
-            <form [formGroup]="registrationForm" (ngSubmit)="registerUser()" class="registration-form shadow p-3 mb-5 bg-white rounded">
-              <h1 class="mb-4">Student Registration Form</h1>
+            <h1 class="text-center mb-4 mt-3">Student Registration Form</h1>
+            <form [formGroup]="registrationForm" (ngSubmit)="registerUser()" class="shadow p-3 mb-3 bg-white rounded">
               <div class="mb-3">
-                <label for="username" class="form-label">Username</label>  
-                  <input type="text" id="username" placeholder="Enter Username" formControlName="username" class="form-control">
-                  <span  *ngIf="username?.invalid && username?.errors?.['required']" class="vlaid text-danger">Username is required</span>
+                <label for="username" class="form-label">Username</label>
+                <input type="text" id="username" placeholder="Enter Username" formControlName="username" class="form-control">
+                <span *ngIf="username?.invalid && username?.touched" class="text-danger">Username is required</span>
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">E-Mail</label>
                 <input type="email" id="email" placeholder="Enter E-Mail" formControlName="email" class="form-control">
-                <span *ngIf="email?.invalid && email?.errors?.['required']" class=" vlaid text-danger">Email is required</span>
-                <span *ngIf="email?.invalid && email?.errors?.['email']" class="vlaid text-danger">Invalid email format</span>
+                <span *ngIf="email?.invalid && email?.touched" class="text-danger">Email is required</span>
+                <span *ngIf="email?.invalid && email?.errors?.['email'] && email?.touched" class="text-danger">Invalid email format</span>
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" id="password" formControlName="password" class="form-control">
-                <span *ngIf="password?.invalid && password?.errors?.['required']" class=" vlaid text-danger">Password is required</span>
+                <span *ngIf="password?.invalid && password?.touched" class="text-danger">Password is required</span>
               </div>
               <div class="mb-3">
-                <label for="confirmPassword" class="form-label">Conform Password</label>
+                <label for="confirmPassword" class="form-label">Confirm Password</label>
                 <input type="password" id="confirmPassword" formControlName="confirmPassword" class="form-control">
-                <span *ngIf="confirmPassword?.invalid && confirmPassword?.errors?.['required']" class=" vlaid text-danger">Conform Password is required</span>
-                <span *ngIf="!passwordsMatch()" class="vlaid text-danger">Passwords must match</span>
+                <span *ngIf="confirmPassword?.invalid && confirmPassword?.touched" class="text-danger">Confirm Password is required</span>
+                <span *ngIf="!passwordsMatch() && confirmPassword?.touched" class="text-danger">Passwords must match</span>
               </div>
               <button type="submit" [disabled]="registrationForm.invalid || !passwordsMatch()" class="btn btn-primary">Register</button>
             </form>
           </div>
-        </div>  
+        </div>
       </div>
     </div>
-    <div class="row justify-content-center mt-3">
-      <div class="col-md-6 text-center">
-        <p>If you have already registered, click <button type="button" class="btn btn-link" (click)="toggleLogin()">here</button> to login.</p>
+    <div class="row justify-content-center loginhere">
+      <div class="col text-center">
+        <p>If you have already registered, click <button type="button" class="btn btn-link border-info" (click)="toggleLogin()">here</button> to login.</p>
       </div>
     </div>
   </div>
