--- a/src/app/pages/registration-form/registration-form.component.html
+++ b/src/app/pages/registration-form/registration-form.component.html
@@ -1,4 +1,6 @@
-<div class="container">
+<div class="container-fluid blur-background">
+  <div class="row justify-content-center align-items-center">
+  <div class="col-md-4">
   <div class="register-form">
     <div class="row justify-content-center">
       <div class="col">
@@ -40,5 +42,7 @@
         <p>If you have already registered, click <button type="button" class="btn btn-link border-info" (click)="toggleLogin()">here</button> to login.</p>
       </div>
     </div>
+  </div>
+</div>
   </div>
 </div>
