--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,60 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#">EduHub</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Courses</a>
-          </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sign Up</a>
-          </li> -->
-        </ul>
-      </div>
-    </div>
-</nav>
-
-
-<div class="container-fluid main">
-  <div class="row">
-    <div class="col-lg-7 col-md-5 col-sm-12 mx-auto mt-4">
-      <div class="row">
-        <div class="col">
-          <h1 class="text-center">Welcome to EduHub</h1>
-          <p class="text-center">Unlock your potential with our wide range of online courses.</p>
-          <p class="text-center">Start learning today and take your skills to the next level.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-7 col-sm-12 mx-auto router-outlet">
-      <div class="row">
-        <div class="col">
-          <router-outlet></router-outlet>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-<footer class="footer mt-auto">
-    <div class="container">
-      <p>Contact Us:</p>
-      <p>Email: contact eduhub.com</p>
-      <p>Phone: +1 (123) 456-7890</p>
-      <p>Follow us on <a href="#">Facebook</a>, <a href="#">Twitter</a>, and <a href="#">Instagram</a></p>
-    </div>
-  </footer>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
