--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,77 +1,67 @@
-<div class="container">
-  <div class="login-form">
-    <div class="row justify-content-center">
-      <div class="col">
-        <div class="container">
-          <div class="login-forms">
-            <app-login-signup-buttons (login)="navigateToLogin()" (signup)="navigateToSignup()"></app-login-signup-buttons>
-            <div *ngIf="loginvisible">
-              <h1 class="text-center mb-4 mt-3">Login</h1>
-              <form [formGroup]="login" (ngSubmit)="loginUser()" class="shadow p-3 mb-3 bg-white rounded">
-                <div class="mb-3">
-                  <div class="select_Email_user">
-                    <input type="radio" id="loginWithUsername" name="loginMethod" value="username" formControlName="loginMethod" checked>
-                    <label for="loginWithUsername">Username</label>
-                    <input type="radio" id="loginWithEmail" name="loginMethod" value="email" formControlName="loginMethod">
-                    <label for="loginWithEmail">Email</label>
-                  </div>
+<div class="container-fluid blur-background">
+  <div class="row justify-content-center align-items-center">
+    <div class="col-md-4">
+      <div class="login-form">
+        <div class="login-forms">
+          <app-login-signup-buttons (login)="navigateToLogin()" (signup)="navigateToSignup()"></app-login-signup-buttons>
+          <div *ngIf="loginvisible">
+            <h1 class="text-center mb-4 mt-3">Login</h1>
+            <form [formGroup]="login" (ngSubmit)="loginUser()" class="shadow p-3 mb-3 bg-white rounded">
+              <div class="mb-3">
+                <div class="select_Email_user">
+                  <input type="radio" id="loginWithUsername" name="loginMethod" value="username" formControlName="loginMethod" checked>
+                  <label for="loginWithUsername">Username</label>
+                  <input type="radio" id="loginWithEmail" name="loginMethod" value="email" formControlName="loginMethod">
+                  <label for="loginWithEmail">Email</label>
                 </div>
-                <div class="mb-3">
-                  <label *ngIf="login.controls['loginMethod'].value === 'username'" for="username" class="form-label">Username</label>
-                  <input *ngIf="login.controls['loginMethod'].value === 'username'" placeholder="Enter Username" type="text" id="username" formControlName="username" class="form-control">
-                  <label *ngIf="login.controls['loginMethod'].value === 'email'" for="email" class="form-label">Email</label>
-                  <input *ngIf="login.controls['loginMethod'].value === 'email'" type="email" id="email" formControlName="email" class="form-control">
+              </div>
+              <div class="mb-3">
+                <label *ngIf="login.controls['loginMethod'].value === 'username'" for="username" class="form-label">Username</label>
+                <input *ngIf="login.controls['loginMethod'].value === 'username'" placeholder="Enter Username" type="text" id="username" formControlName="username" class="form-control">
+                <label *ngIf="login.controls['loginMethod'].value === 'email'" for="email" class="form-label">Email</label>
+                <input *ngIf="login.controls['loginMethod'].value === 'email'" type="email" id="email" formControlName="email" class="form-control">
+              </div>
+              <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <div class="password-input-group">
+                  <input type="{{ passwordVisible ? 'text' : 'password' }}" id="password" formControlName="password" class="form-control">
+                  <i class="password-toggle-icon fas fa-eye" [ngClass]="{ 'fa-eye': !passwordVisible, 'fa-eye-slash': passwordVisible }" (click)="togglePasswordVisibility()"></i>
                 </div>
-                <div class="mb-3">
-                  <label for="password" class="form-label">Password</label>
-                  <div class="password-input-group">
-                    <input type="{{ passwordVisible ? 'text' : 'password' }}" id="password" formControlName="password" class="form-control">
-                    <i class="password-toggle-icon fas fa-eye" [ngClass]="{ 'fa-eye': !passwordVisible, 'fa-eye-slash': passwordVisible }" (click)="togglePasswordVisibility()"></i>
-                  </div>
-                  <span *ngIf="password?.invalid && password?.touched" class="text-danger">Password is required</span>
-                </div>
-                <button type="submit" [disabled]="login.invalid" class="btn btn-primary">Login</button>
-              </form>
+                <span *ngIf="password?.invalid && password?.touched" class="text-danger">Password is required</span>
+              </div>
+              <button type="submit" [disabled]="login.invalid" class="btn btn-primary">Login</button>
+            </form>
           </div>
-
-            <!-- <div class="text-right">
-              <a href="#" class="btn btn-link">Forgot  Password?</a>
-            </div> -->
-            <div *ngIf="resetPasswordVisible">
-              <h2 class="text-center mb-4 mt-3">Reset Password</h2>
-              <form [formGroup]="resetPassword" (ngSubmit)="resetPasswordSubmit()" class="shadow p-3 mb-3 bg-white rounded">
-                <div class="mb-3">
-                  <label for="resetEmail" class="form-label">Email</label>
-                  <input type="email" id="resetEmail" formControlName="resetEmail" class="form-control">
-                </div>
-                <div class="mb-3">
-                  <label for="newPassword" class="form-label">New Password</label>
-                  <input type="password" id="newPassword" formControlName="newPassword" class="form-control">
-                </div>
-                <div class="mb-3">
-                  <label for="confirmPassword" class="form-label">Confirm Password</label>
-                  <input type="password" id="confirmPassword" formControlName="confirmPassword" class="form-control">
-                  <!-- <span *ngIf="resetPassword.controls['confirmPassword'].errors?.passwordMismatch" class="text-danger">Passwords do not match</span> -->
-                  <span *ngIf="resetPassword.controls['confirmPassword'].errors?.['passwordMismatch']" class="text-danger">Passwords do not match</span>
-                </div>
-                <button type="submit" [disabled]="resetPassword.invalid" class="btn btn-primary">Reset Password</button>
-              </form>
+          <div *ngIf="resetPasswordVisible">
+            <h2 class="text-center mb-4 mt-3">Reset Password</h2>
+            <form [formGroup]="resetPassword" (ngSubmit)="resetPasswordSubmit()" class="shadow p-3 mb-3 bg-white rounded">
+              <div class="mb-3">
+                <label for="resetEmail" class="form-label">Email</label>
+                <input type="email" id="resetEmail" formControlName="resetEmail" class="form-control">
+              </div>
+              <div class="mb-3">
+                <label for="newPassword" class="form-label">New Password</label>
+                <input type="password" id="newPassword" formControlName="newPassword" class="form-control">
+              </div>
+              <div class="mb-3">
+                <label for="confirmPassword" class="form-label">Confirm Password</label>
+                <input type="password" id="confirmPassword" formControlName="confirmPassword" class="form-control">
+                <span *ngIf="resetPassword.controls['confirmPassword'].errors?.['passwordMismatch']" class="text-danger">Passwords do not match</span>
+              </div>
+              <button type="submit" [disabled]="resetPassword.invalid" class="btn btn-primary">Reset Password</button>
+            </form>
+          </div>
+          <div class="text-right">
+            <a href="#" class="btn btn-link" (click)="toggleResetPasswordForm($event); $event.preventDefault()">
+              {{ resetPasswordVisible ? 'Login Form' : 'Forgot Password ?' }}
+            </a>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col text-center">
+              <p>If you don't have an account, click <button type="button" class="btn btn-link border-info"(click)="toggleLogin()">here</button> to Register.</p>
             </div>
-        
-            <!-- Toggle button for showing/hiding reset password form -->
-            <div class="text-right">
-              <a href="#" class="btn btn-link" (click)="toggleResetPasswordForm($event); $event.preventDefault()">
-                {{ resetPasswordVisible ? 'Login Form' : 'Forgot Password ?' }}
-              </a>
-            </div>
-            
           </div>
         </div>
-      </div>
-    </div>
-    <div class="row justify-content-center ">
-      <div class="col text-center">
-        <p>If you don't have an account, click <button type="button" class="btn btn-link border-info"(click)="toggleLogin()">here</button> to Register.</p>
       </div>
     </div>
   </div>
