--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,20 +6,12 @@
           <app-login-signup-buttons (login)="navigateToLogin()" (signup)="navigateToSignup()"></app-login-signup-buttons>
           <div *ngIf="loginvisible">
             <h1 class="text-center mb-4 mt-3">Login</h1>
-            <form [formGroup]="login" (ngSubmit)="loginUser()" class="shadow p-3 mb-3 bg-white rounded">
+            <form [formGroup]="loginForm" (ngSubmit)="loginUser()" class="shadow p-3 mb-3 bg-white rounded">
+            
               <div class="mb-3">
-                <div class="select_Email_user">
-                  <input type="radio" id="loginWithUsername" name="loginMethod" value="username" formControlName="loginMethod" checked>
-                  <label for="loginWithUsername">Username</label>
-                  <input type="radio" id="loginWithEmail" name="loginMethod" value="email" formControlName="loginMethod">
-                  <label for="loginWithEmail">Email</label>
-                </div>
-              </div>
-              <div class="mb-3">
-                <label *ngIf="login.controls['loginMethod'].value === 'username'" for="username" class="form-label">Username</label>
-                <input *ngIf="login.controls['loginMethod'].value === 'username'" placeholder="Enter Username" type="text" id="username" formControlName="username" class="form-control">
-                <label *ngIf="login.controls['loginMethod'].value === 'email'" for="email" class="form-label">Email</label>
-                <input *ngIf="login.controls['loginMethod'].value === 'email'" type="email" id="email" formControlName="email" class="form-control">
+              
+                <label  for="email" class="form-label">Email</label>
+                <input  type="email" id="email" formControlName="email" class="form-control">
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
@@ -29,12 +21,12 @@
                 </div>
                 <span *ngIf="password?.invalid && password?.touched" class="text-danger">Password is required</span>
               </div>
-              <button type="submit" [disabled]="login.invalid" class="btn btn-primary">Login</button>
+              <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">Login</button>
             </form>
           </div>
-          <div *ngIf="resetPasswordVisible">
+          <div *ngIf="passwordVisible">
             <h2 class="text-center mb-4 mt-3">Reset Password</h2>
-            <form [formGroup]="resetPassword" (ngSubmit)="resetPasswordSubmit()" class="shadow p-3 mb-3 bg-white rounded">
+            <form [formGroup]="resetPasswordForm" (ngSubmit)="resetPassword()" class="shadow p-3 mb-3 bg-white rounded">
               <div class="mb-3">
                 <label for="resetEmail" class="form-label">Email</label>
                 <input type="email" id="resetEmail" formControlName="resetEmail" class="form-control">
@@ -46,9 +38,9 @@
               <div class="mb-3">
                 <label for="confirmPassword" class="form-label">Confirm Password</label>
                 <input type="password" id="confirmPassword" formControlName="confirmPassword" class="form-control">
-                <span *ngIf="resetPassword.controls['confirmPassword'].errors?.['passwordMismatch']" class="text-danger">Passwords do not match</span>
+                <span *ngIf="resetPasswordForm.controls['confirmPassword'].errors?.['passwordMismatch']" class="text-danger">Passwords do not match</span>
               </div>
-              <button type="submit" [disabled]="resetPassword.invalid" class="btn btn-primary">Reset Password</button>
+              <button type="submit" [disabled]="resetPasswordForm.invalid" class="btn btn-primary">Reset Password</button>
             </form>
           </div>
           <div class="text-right">
