--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,15 @@
-<p>dashboard works!</p>
+<div class="container">
+
+  <div *ngIf="categories && categories.length > 0">
+    <h2>List of Categories</h2>
+  <ul>
+      <li *ngFor="let category of categories">
+      {{ category[1] }}
+      </li>
+  </ul>
+</div>
+<div *ngIf="!categories || categories.length === 0">
+  <p>No categories available.</p>
+</div>
+
+</div>
