--- a/src/app/pages/registration-form/registration-form.component.html
+++ b/src/app/pages/registration-form/registration-form.component.html
@@ -10,9 +10,9 @@
             <h1 class="text-center mb-4 mt-3">Student Registration Form</h1>
             <form [formGroup]="registrationForm" (ngSubmit)="registerUser()" class="shadow p-3 mb-3 bg-white rounded">
               <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" id="username" placeholder="Enter Username" formControlName="username" class="form-control">
-                <span *ngIf="username?.invalid && username?.touched" class="text-danger">Username is required</span>
+                <label for="userName" class="form-label">Username</label>
+                <input type="text" id="userName" placeholder="Enter userName" formControlName="userName" class="form-control">
+                <span *ngIf="userName?.invalid && userName?.touched" class="text-danger">userName is required</span>
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">E-Mail</label>
