--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -20,6 +20,9 @@
             <li class="nav-item">
               <a class="nav-link" routerLink="/contact">Contact</a>
             </li>
+            <li class="nav-item" >
+              <a class="nav-link" routerLink="/courses">Courses</a>
+            </li>
             <li class="nav-item " *ngIf="authService.isLoggedIn()">
               <a class="nav-link" routerLink="/dashboard">Dashboard</a>
             </li>
