--- a/src/app/pages/courses/courses.component.css
+++ b/src/app/pages/courses/courses.component.css
@@ -111,7 +111,36 @@
   left: 30%;
 }
 
+.modal-title{
+  margin-left: 5vw;
+  padding:0 2rem;
+}
+.modal-body{
+  padding:0 2rem;
+}
+.modal-body .coursecontent  thead tr th{
+  background-color: #007bff;
+  color: white;
+  font-size: 1.2rem;
+}
+.modal-body .coursecontent tbody tr td{
+  font-size: 1.1rem;
+  line-height: 1.5;
+}
 
+.modal-footer  {
+  display: flex;
+  justify-content: space-between;
+  place-content: center;
+  text-align: center;
+  align-items: center;
+  padding:0.5rem 2rem;
+}
+.modal-footer .enroll-footer .btn{
+  font-size: 1.2rem;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+}
 /* Styling for the table container */
 .table-container {
   border-radius: 10px;
